--- a/cn.puma.www/css/index.css
+++ b/cn.puma.www/css/index.css
@@ -20,7 +20,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: 400;
+  font-weight: 500;
 }
 
 /* 顶部 */
@@ -542,6 +542,7 @@ h6 {
   width: 100%;
   height: 100%;
 }
+
 /* 资源一线左边导航  */
 
 .mdmsfdsd .activity-flet {
@@ -594,3 +595,220 @@ h6 {
   height: 50px;
   line-height: 50px;
 }
+
+
+/* 不同款式鞋 */
+
+.homeCutOut {
+  display: flex;
+  position: relative;
+
+}
+
+.homeCutOut .cp-homeCutOut-item {
+  width: 33.33%;
+}
+
+.homeCutOut .cp-homeCutOut-item a {
+  width: 100%;
+  height: auto;
+}
+
+.homeCutOut .cp-homeCutOut-item a img {
+  width: 100%;
+  height: auto;
+}
+
+
+.homeCutOut .cp-homeCutOut-item .content {
+  text-align: center;
+  margin-bottom: 35px;
+}
+
+.homeCutOut .cp-homeCutOut-item .content h1 {
+  font-weight: 700;
+  font-size: 22px;
+  color: #222;
+  margin: 22px 0 9px;
+}
+
+.homeCutOut .cp-homeCutOut-item .content h3 {
+  font-size: 16px;
+  color: #222;
+}
+
+.homeCutOut .cp-homeCutOut-item .content .link-btn {
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.homeCutOut .cp-homeCutOut-item .content .link-btn .link-box {
+  display: block;
+
+  color: #fff;
+  background: #000;
+  zoom: 1;
+  font-weight: 700;
+  text-align: center;
+  touch-action: manipulation;
+  user-select: none;
+  transition: all .2s ease-in-out;
+  overflow: hidden;
+  font-size: 16px;
+  padding: 0 20px;
+  border: 0;
+  border-radius: 0;
+  letter-spacing: 1px;
+  width: 200px;
+  height: 50px;
+  margin: auto;
+  margin-bottom: 22px;
+  line-height: 50px;
+}
+
+
+/* 鞋子轮播图 */
+.box {
+  max-width: 1375px;
+  margin: 0 auto;
+
+}
+
+.box-top {
+  margin-bottom: 26px;
+  color: #222;
+  text-align: center;
+  font-weight: 700;
+  font-size: 24px;
+}
+
+#roll {
+  padding: 0 64px;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  overflow: hidden;
+  list-style: none;
+  padding: 0;
+  z-index: 1;
+  margin: 0 auto;
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+#roll dd {
+  width: 263.25px;
+  margin-right: 20px;
+  font-size: 15px;
+  color: #222;
+  text-align: center;
+  width: 25%;
+  height: 100%;
+  position: relative;
+
+}
+
+#roll dd a {
+  display: block;
+  position: relative;
+  pointer-events: auto;
+}
+
+#roll dd object img {
+  width: 280px;
+  width: 100%;
+}
+
+#roll dd object {
+  height: auto;
+  max-width: 100%;
+  font-size: 15px;
+  text-align: center;
+}
+
+
+#roll dd object .black-border {
+  position: absolute;
+  top: 40%;
+  left: 35%;
+  display: none;
+  width: 120px;
+  border: 1px solid #000;
+  background: #000;
+  line-height: 48px;
+  color: #fff;
+  zoom: 1;
+  font-weight: 700;
+  text-align: center;
+  touch-action: manipulation;
+  cursor: pointer;
+  user-select: none;
+  box-sizing: border-box;
+  margin: auto;
+}
+
+#roll dd .line {
+  width: 100%;
+  height: 1px;
+  background: #ccc;
+  margin: 20px 0;
+}
+
+#roll dd .title {
+  margin-bottom: 10px;
+  color: #222;
+}
+
+#roll dd .title p {
+  font-size: 15px;
+  margin-bottom: 10px;
+}
+
+#roll dd .title .currentPrice {
+  color: #222;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+#roll dd .title .currentPrice span {
+  color: #222;
+  text-align: center;
+  font-weight: 700;
+}
+
+
+.box #roll .prev {
+  position: absolute;
+  width: 34px;
+  height: 72px;
+  background: none;
+  z-index: 5;
+  left: 0;
+  top: 50%;
+}
+
+.box .prev img {
+  width: 100%;
+  height: 100%;
+}
+
+.box #roll .next {
+  position: absolute;
+  right: 0;
+  width: 34px;
+  height: 72px;
+  background: none;
+  z-index: 5;
+  top: 50%;
+  margin-left: 20px;
+}
+
+.box .next img {
+  width: 100%;
+  height: 100%;
+}
+
+/* 底部 */
