--- a/cn.puma.www/css/index.css
+++ b/cn.puma.www/css/index.css
@@ -60,7 +60,6 @@ h6 {
 .headpiece-ding .nav-lt .nav-lt-fl .icon {
   width: 66px;
   height: 54px;
-  background-image: url(./image/index/bt.png);
 }
 
 .headpiece-ding .nav-lt .menu {
@@ -376,7 +375,7 @@ h6 {
 .fullBleedHero {
   position: relative;
   width: 100%;
-  height: 600px;
+  height: 700px;
   margin-bottom: 30px;
 }
 
@@ -448,7 +447,7 @@ h6 {
 .activiss {
   position: relative;
   width: 100%;
-  height: 500px;
+  height: 700px;
   margin-bottom: 30px;
 }
 
@@ -463,7 +462,7 @@ h6 {
 .cylHero {
   position: relative;
   width: 100%;
-  height: 500px;
+  height: 700px;
   margin-bottom: 30px;
 }
 
@@ -524,7 +523,7 @@ h6 {
 .scksfd {
   position: relative;
   width: 100%;
-  height: 500px;
+  height: 700px;
   margin-bottom: 30px;
 }
 
@@ -538,7 +537,7 @@ h6 {
 .mdmsfdsd {
   position: relative;
   width: 100%;
-  height: 500px;
+  height: 700px;
   margin-bottom: 30px;
 }
 
@@ -616,7 +615,7 @@ h6 {
 .homeCutOut .cp-homeCutOut-item a {
   width: 100%;
   height: auto;
-}
+}；
 
 .homeCutOut .cp-homeCutOut-item a img {
   width: 100%;
